Drop support of Jetty Alpn (#14234)
Motivation:

Jetty Alpn is required when the JDK runtime does not support ALPN using
an agent. This is not required anymore since Netty 4.2 depends on Java 8
and Java 8 has been supporting ALPN since 8u252. Jetty Alpn is not
supported anymore by the maintainers of the library
(https://webtide.com/jetty-alpn-java-8u252/). A side motivation is the
support of declarative module in Netty, since Jetty Alpn is not
supported anymore, it would not provide proper descriptors.

Changes:

Remove dependency and handling of Jetty Alpn.

Results:

Netty does not depend anymore on `org.eclipse.jetty.alpn:alpn-api` .

Fixes #14227